--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emailjs/browser": "^3.10.0",
     "@react-three/drei": "^9.62.2",
     "@react-three/fiber": "^8.12.0",
+    "antd": "^5.4.0",
     "framer-motion": "^10.10.0",
     "maath": "^0.5.3",
     "react": "^18.2.0",
