--- a/package.json
+++ b/package.json
@@ -31,5 +31,13 @@
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
   "main": "next.config.js",
   "author": "Basam C. Serad",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/basamserad/My-Personal-Website.git"
+  },
+  "bugs": {
+    "url": "https://github.com/basamserad/My-Personal-Website/issues"
+  },
+  "homepage": "https://github.com/basamserad/My-Personal-Website#readme"
 }
